update on html (home, catalogue, menu) and css (menu)

--- a/src/main/resources/templates/user/menu.html
+++ b/src/main/resources/templates/user/menu.html
@@ -63,80 +63,18 @@
           </td>
           <td class="tableRadio1">
             <ul>
-              <strong> Original</strong>
-              <li>Original 6" (RM13)</li>
-              <li>Original 8" (RM26)</li>
-            </ul>
-          </td>
-        </tr>
+              <strong> Original</strong><br>
+              <input type="radio" id="pisang6" name="pisang" value="pisang">
+              <label for="pisang">Original 6" (RM13)</label><br>
+              
+              <label for="qty">Quantity:</label>
+              <input type="number" id="qty1" name="qty1" min="0"><br><br>
+              
+              <input type="radio" id="pisang" name="pisang" value="pisang">
+              <label for="pisang">Original 8" (RM26)</label><br>
 
-        <!-- KEK MARBLE -->
-        <tr>
-          <td class="tableList2" colspan="2">KEK MARBLE</td>
-          <td class="tableOption2">FLAVOUR & SIZE</td>
-        </tr>
-        <tr>
-          <td class="tableListPics2" colspan="2">
-            <div class="containerimage">
-              <div class="panel" id="kekmarble1" th:style="'background: url(/image/marble.jpg) no-repeat center; background-size: cover;'"></div>
-              <div class="panel" id="kekmarble2" th:style="'background: url(/image/marble2.jpg) no-repeat center; background-size: cover;'"></div>
-              <div class="panel" id="kekmarble3" th:style="'background: url(/image/marble3.jpg) no-repeat center; background-size: cover;'"></div>
-            </div>
-          </td>
-          <td class="tableRadio2">
-            <ul>
-              <li>Original 8" (RM35)</li>
-              <li>Chocolate 8" (RM37)</li>
-              <li>Orange 8" (RM37)</li>
-              <li>Vanilla Chocolate 8" (RM37)</li>
-              <li>Coconut Pandan 8" (RM37)</li>
-              <li>Red Velvet 8" (RM37)</li>
-              <li>Coffee 8" (RM37)</li>
-              <li>Oreo 8" (RM40)</li>
-              <li>Hawflakes 8" (RM40)</li>
-            </ul>
-          </td>
-        </tr>
-
-        <!-- KEK MARBLE CHEESE -->
-        <tr>
-          <td class="tableList3" colspan="2">KEK MARBLE CHEESE</td>
-          <td class="tableOption3">FLAVOUR & SIZE</td>
-        </tr>
-        <tr>
-          <td class="tableListPics3" colspan="2">
-            <div class="containerimage">
-              <div class="panel" id="kekmarblecheese1" th:style="'background: url(/image/marblecheese.jpg) no-repeat center; background-size: cover;'"></div>
-              <div class="panel" id="kekmarblecheese2" th:style="'background: url(/image/marblecheese2.jpg) no-repeat center; background-size: cover;'"></div>
-              <div class="panel" id="kekmarblecheese3" th:style="'background: url(/image/marblecheese3.jpg) no-repeat center; background-size: cover;'"></div>
-            </div>
-          </td>
-          <td class="tableRadio3">
-            <ul>
-              <li>Original 8" (RM40)</li>
-              <li>Chocolate 8" (RM42)</li>
-              <li>Oreo 8" (RM45)</li>
-            </ul>
-          </td>
-        </tr>
-
-        <!-- KEK RED VELVET -->
-        <tr>
-          <td class="tableList4" colspan="2">KEK RED VELVET</td>
-          <td class="tableOption4">SIZE</td>
-        </tr>
-        <tr>
-          <td class="tableListPics4" colspan="2">
-            <div class="containerimage">
-              <div class="panel" id="redvelvet1" th:style="'background: url(/image/redvelvet.jpg) no-repeat center; background-size: cover;'"></div>
-              <div class="panel" id="redvelvet2" th:style="'background: url(/image/redvelvet2.jpg) no-repeat center; background-size: cover;'"></div>
-              <div class="panel" id="redvelvet3" th:style="'background: url(/image/redvelvet3.jpg) no-repeat center; background-size: cover;'"></div>
-            </div>
-          </td>
-          <td class="tableRadio4">
-            <ul>
-              <li>6" (RM35)</li>
-              <li>8" (RM65)</li>
+              <label for="qty">Quantity:</label>
+              <input type="number" id="qty2" name="qty2" min="0"><br>
             </ul>
           </td>
         </tr>
@@ -156,8 +94,17 @@
           </td>
           <td class="tableRadio5">
             <ul>
-              <li>6" (RM32)</li>
-              <li>8" (RM62)</li>
+              <input type="radio" id="batik6" name="batik" value="batik6">
+              <label for="batik6">6" (RM32)</label><br>
+
+              <label for="qty">Quantity:</label>
+              <input type="number" id="qty3" name="qty3" min="0"><br><br>
+
+              <input type="radio" id="batik8" name="batik" value="batik8">
+              <label for="batik8">8" (RM62)</label><br>
+
+              <label for="qty">Quantity:</label>
+              <input type="number" id="qty4" name="qty4" min="0"><br>
             </ul>
           </td>
         </tr>
@@ -177,20 +124,30 @@
           </td>
           <td class="tableRadio6">
             <ul>
-              <li>6" (RM22)</li>
-              <li>8" (RM40)</li>
-              <li>10" (RM60)</li>
+              <input type="radio" id="brownies6" name="brownies" value="brownies6">
+              <label for="brownies6">6" (RM22)</label><br>
+
+              <label for="qty">Quantity:</label>
+              <input type="number" id="qty5" name="qty5" min="0"><br><br>
+
+              <input type="radio" id="brownies8" name="brownies" value="brownies8">
+              <label for="brownies8">8" (RM40)</label><br>
+
+              <label for="qty">Quantity:</label>
+              <input type="number" id="qty6" name="qty6" min="0"><br><br>
+
+              <input type="radio" id="brownies10" name="brownies" value="brownies10">
+              <label for="brownies10">10" (RM60)</label><br>
+
+              <label for="qty">Quantity:</label>
+              <input type="number" id="qty7" name="qty7" min="0"><br>
             </ul>
           </td>
         </tr>
         <tr>
           <td colspan="3" style="background-color: #4c4c4c">
             <p class="order">
-              <a th:href="@{https://www.instagram.com/irizq_kitchen/}" target="_blank">
-                <button type="button" class="btn btn-outline-dark">
-                  Click Here To Order!
-                </button>
-              </a>
+              <button type="submit">Click Here To Submit Your Order!</button>
             </p>
           </td>
         </tr>
