--- a/src/main/resources/templates/admin/bakerregister.html
+++ b/src/main/resources/templates/admin/bakerregister.html
@@ -11,7 +11,7 @@
       <!-- cdn icon link  -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
       <!-- custom css file  -->
-      <link rel="stylesheet" th:href="@{stylesheets/adminregister.css}">
+      <link rel="stylesheet" th:href="@{stylesheets/bakerregister.css}">
       <!-- js bootstrap -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </head>
@@ -35,7 +35,7 @@
                id="bakerInputName" 
                placeholder="Ali Bin Abu" 
                required aria-describedby="nameHelp"
-               name="bakername">
+               name="fullname">
             </div>
           <div class="mb-3">
             <label for="bakerInputEmail" class="form-label">Email address</label>
@@ -44,25 +44,15 @@
              id="bakerInputEmail"
               placeholder="ali@gmail.com" 
               required aria-describedby="emailHelp"
-              name="bakeremail">
+              name="email">
           </div>
-          <div class="mb-3">
-              <label for="bakerInputPhone" class="form-label">Phone Number</label>
-              <input type="number"
-               class="form-control" 
-               id="bakerInputNumber"
-                placeholder="012 345 6789"
-                 maxlength = "11" 
-                 required
-                 name="bakerphonenumber">
-            </div>
           <div class="mb-3">
             <label for="bakerpassword" class="form-label">Password</label>
             <input type="password"
              class="form-control" 
              id="bakerPassword" 
              minlength="8" required
-             name="bakerpassword">
+             name="password">
             <div id="passwordHelp" class="form-text">At least 8 characters.</div>
           </div>
           <div class="text-center">
