--- a/src/main/resources/templates/user/menu.html
+++ b/src/main/resources/templates/user/menu.html
@@ -147,7 +147,7 @@
         <tr>
           <td colspan="3" style="background-color: #4c4c4c">
             <p class="order">
-              <button type="submit">Click Here To Submit Your Order!</button>
+              <a th:href="@{/cart}"><button type="submit">Click Here To Submit Your Order!</button></a>
             </p>
           </td>
         </tr>
