--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -29,11 +29,7 @@
   </div>
 
   <nav class="navbar">
-      <a th:href="@{/home}">Home</a>
-      <a th:href="@{/catalogue}">Catalogue</a>
-      <a th:href="@{/about}">About</a>
-      <a th:href="@{/faqs}">FAQs</a>
-      <a th:href="@{/custprofile}">Profile</a>
+      <a th:href="@{/login}">LOGIN</a>
   </nav>
 </header>
 <!-- header section end here  -->
