--- a/src/main/resources/templates/user/userregister.html
+++ b/src/main/resources/templates/user/userregister.html
@@ -49,12 +49,13 @@
             </div>
             <div class="mb-3">
                 <label for="exampleInputPhone" class="form-label">Phone Number</label>
-                <input type="phonenum"
-                 class="form-control" 
+                <input type="tel"
+                 class="form-control"
+                 pattern="[0-9]{10}" 
                  id="exampleInputNumber"
                   placeholder="012 345 6789"
                    maxlength = "11" 
-                   required
+                   required aria-describedby="phonenumHelp"
                    name="phonenumber">
               </div>
               <div class="mb-3">
