--- a/src/main/resources/public/stylesheets/home.css
+++ b/src/main/resources/public/stylesheets/home.css
@@ -175,8 +175,10 @@ div.desc {
 
 .responsive {
     padding: 0 6px;
+    display: flex;
+    align-self: center;
     float: left;
-    width: 25%;
+    width: 33%;
 }
   
 @media only screen and (max-width: 700px) {
