add hashing password staff

--- a/src/main/resources/templates/admin/bakermenu.html
+++ b/src/main/resources/templates/admin/bakermenu.html
@@ -18,15 +18,15 @@
 <!-- header section start here  -->
 <header class="header">
   <div class="logoContent">
-      <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
-      <h1 class="logoName">iRizq Kitchen Admin</h1>
+      <a th:href="@{/stafforder}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+      <h1 class="logoName">iRizq Kitchen Staff</h1>
   </div>
 
   <nav class="navbar">
-      <a th:href="@{/bakerorder}">Order List</a>
-      <a th:href="@{/bakermenu}">Menu</a>
-      <a th:href="@{/bakerregister}">Register new baker</a>
-      <a th:href="@{/bakerprofile}">Profile</a>
+      <a th:href="@{/stafforder}">Order List</a>
+      <a th:href="@{/staffmenu}">Menu</a>
+      <a th:href="@{/staffregister}">Register new baker</a>
+      <a th:href="@{/staffprofile}">Profile</a>
   </nav>
 </header>
 <!-- header section end here   -->
