--- a/src/main/resources/templates/admin/staffregister.html
+++ b/src/main/resources/templates/admin/staffregister.html
@@ -11,7 +11,7 @@
       <!-- cdn icon link  -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
       <!-- custom css file  -->
-      <link rel="stylesheet" th:href="@{stylesheets/bakerregister.css}">
+      <link rel="stylesheet" th:href="@{stylesheets/staffregister.css}">
       <!-- js bootstrap -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </head>
@@ -22,42 +22,42 @@
       <form 
       class="d-flex justify-content-center"
       method="post"
-      th:action="@{/bakerregister}"
-      modelAttribute="bakerregister"
-      th:object="(${bakerregister})"
+      th:action="@{/staffregister}"
+      modelAttribute="staffregister"
+      th:object="(${staffregister})"
       
       >
       <div class="card col-6">
        <div class="card-body">
           <div class="mb-3">
               <label for="bakerInputName" class="form-label ">Full Name</label>
-              <input type="fullname"
+              <input type="staffsname"
               class="form-control text-uppercase"
-               id="bakerInputName" 
+               id="staffInputName" 
                placeholder="Ali Bin Abu" 
                required aria-describedby="nameHelp"
-               name="fullname">
+               name="staffsname">
             </div>
           <div class="mb-3">
-            <label for="bakerInputEmail" class="form-label">Email address</label>
+            <label for="staffsInputEmail" class="form-label">Email address</label>
             <input type="email"
              class="form-control" 
-             id="bakerInputEmail"
+             id="staffsInputEmail"
               placeholder="ali@gmail.com" 
               required aria-describedby="emailHelp"
-              name="email">
+              name="staffsemail">
           </div>
           <div class="mb-3">
-            <label for="bakerpassword" class="form-label">Password</label>
+            <label for="staffspassword" class="form-label">Password</label>
             <input type="password"
              class="form-control" 
-             id="bakerPassword" 
+             id="staffsPassword" 
              minlength="8" required
-             name="password">
+             name="staffspassword">
             <div id="passwordHelp" class="form-text">At least 8 characters.</div>
           </div>
           <div class="text-center">
-          <button id="btnbakerregister" type="submit" class="btn btn-warning ">Register</button>
+          <button id="btnstaffregister" type="submit" class="btn btn-warning ">Register</button>
           </div></div>
           </div>
       </form></div>
