change the login and register ccontroller

--- a/src/main/resources/templates/admin/staffmenu.html
+++ b/src/main/resources/templates/admin/staffmenu.html
@@ -38,8 +38,8 @@
           <table class="table table-striped text-center d-flex justify-content-center"
           th:action="@{/updatecake}"
           method="post"
-          modelAttribute  ="bakermenu"
-          th:object="${bakermenu}"
+          modelAttribute  ="staffsmenu"
+          th:object="${staffsmenu}"
           >
             <thead>
                 <tr>
