--- a/src/main/resources/templates/admin/staffregister.html
+++ b/src/main/resources/templates/admin/staffregister.html
@@ -36,7 +36,7 @@
                id="staffInputName" 
                placeholder="Ali Bin Abu" 
                required aria-describedby="nameHelp"
-               name="staffsname">
+               name="fullname">
             </div>
           <div class="mb-3">
             <label for="staffsInputEmail" class="form-label">Email address</label>
@@ -45,7 +45,7 @@
              id="staffsInputEmail"
               placeholder="ali@gmail.com" 
               required aria-describedby="emailHelp"
-              name="staffsemail">
+              name="email">
           </div>
           <div class="mb-3">
             <label for="staffspassword" class="form-label">Password</label>
@@ -53,7 +53,7 @@
              class="form-control" 
              id="staffsPassword" 
              minlength="8" required
-             name="staffspassword">
+             name="password">
             <div id="passwordHelp" class="form-text">At least 8 characters.</div>
           </div>
           <div class="text-center">
