--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
      method="post" 
      th:action="@{/login}"
      modelAttribute="login"
-     th:object="(${login})">
+     th:object="${login}">
       <div class="card col-6">
         <div class="card-body">
 
@@ -54,9 +54,9 @@
           <div class="text-center">
             <p>
               New User?
-              <span><a th:href="@{/userregister}">REGISTER HERE</a></span>
+              <span><a th:href="@{/customerregister}">REGISTER HERE</a></span>
             </p>
-            <button type="submit" class="btn btn-warning ">Submit</button>
+            <button type="submit" class="btn btn-warning " value="login">Submit</button>
           </div>
         </div>
     </form>
