--- a/src/main/resources/public/stylesheets/home.css
+++ b/src/main/resources/public/stylesheets/home.css
@@ -123,7 +123,7 @@ html::-webkit-scrollbar-thumb{
     justify-items: center;
     margin: 2% 10%;
     height: 55px;
-    background-color: #8AA899;
+    /* background-color: #8AA899; */
     border-radius: 30px;
 }
 
