--- a/src/main/resources/templates/custprofile.html
+++ b/src/main/resources/templates/custprofile.html
@@ -1,187 +1,187 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Customer Profile</title>
-    <!-- favicon -->
-    <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}">
-    <!-- css bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-     <!-- cdn icon link  -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-     <!-- custom css file  -->
-     <link rel="stylesheet" th:href="@{stylesheets/custprofile.css}"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  </head>
+  <!DOCTYPE html>
+  <html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Customer Profile</title>
+      <!-- favicon -->
+      <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}">
+      <!-- css bootstrap -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+      <!-- cdn icon link  -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+      <!-- custom css file  -->
+      <link rel="stylesheet" th:href="@{stylesheets/custprofile.css}"> 
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    </head>
 
-  <!-- header section start here  -->
- <header class="header">
-    <div class="logoContent">
-        <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
-        <h1 class="logoName">iRizq Kitchen</h1>
-    </div>
-  
-    <nav class="navbar">
-        <a th:href="@{/home}">Home</a>
-        <a th:href="@{/catalogue}">Catalogue</a>
-        <a th:href="@{/about}">About</a>
-        <a th:href="@{/faqs}">FAQs</a>
-        <a th:href="@{/custprofile}">Profile</a>
-    </nav>
-  </header>
-  <!-- header section end here  -->  
+    <!-- header section start here  -->
+  <header class="header">
+      <div class="logoContent">
+          <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+          <h1 class="logoName">iRizq Kitchen</h1>
+      </div>
+    
+      <nav class="navbar">
+          <a th:href="@{/home}">Home</a>
+          <a th:href="@{/catalogue}">Catalogue</a>
+          <a th:href="@{/about}">About</a>
+          <a th:href="@{/faqs}">FAQs</a>
+          <a th:href="@{/custprofile}">Profile</a>
+      </nav>
+    </header>
+    <!-- header section end here  -->  
 
-  <body>
-    <div class="formcontainer">
-        <h1 class="registerform d-flex justify-content-center">CUSTOMER PROFILE</h1>
-        <form 
-        class="d-flex justify-content-center"
-        th:action="@{/updatecust}"
-        method="post"
-        modelAttribute  ="custprofile"
-        th:object="${custprofile}"
-        >
-        <div class="card col-6">
-         <div class="card-body">
-            <div class="mb-3">
-                <label for="exampleInputName" class="form-label ">Full Name</label>
+    <body>
+      <div class="formcontainer">
+          <h1 class="registerform d-flex justify-content-center">CUSTOMER PROFILE</h1>
+          <form 
+          class="d-flex justify-content-center"
+          th:action="@{/updatecust}"
+          method="post"
+          modelAttribute  ="custprofile"
+          th:object="${custprofile}"
+          >
+          <div class="card col-6">
+          <div class="card-body">
+              <div class="mb-3">
+                  <label for="exampleInputName" class="form-label ">Full Name</label>
+                  <input type="text"
+                  class="form-control text-uppercase"
+                  id="exampleInputName"  
+                  aria-describedby="nameHelp"
+                  required
+                  name="fullname"
+                  th:value="${custprofile.fullname}">
+                </div>
+              <div class="mb-3">
+                <label for="exampleInputEmail" class="form-label">Email address</label>
                 <input type="text"
-                 class="form-control text-uppercase"
-                 id="exampleInputName"  
-                 aria-describedby="nameHelp"
-                 required
-                 name="fullname"
-                 th:value="${custprofile.fullname}">
-              </div>
-            <div class="mb-3">
-              <label for="exampleInputEmail" class="form-label">Email address</label>
-              <input type="text"
-               class="form-control" 
-               id="exampleInputEmail"
-               aria-describedby="emailHelp"
-               required
-               name="email"
-               th:value="${custprofile.email}">
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPhone" class="form-label">Phone Number</label>
-                <input type="text"
-                 class="form-control" 
-                 id="exampleInputNumber"
-                 maxlength = "11" 
-                 required
-                 name="phonenumber"
-                 th:value="(${custprofile.phonenumber})">
+                class="form-control" 
+                id="exampleInputEmail"
+                aria-describedby="emailHelp"
+                required
+                name="email"
+                th:value="${custprofile.email}">
               </div>
               <div class="mb-3">
-                <label for="exampleInputAddress" class="form-label">Address</label>
-                <input type="text"
-                 class="form-control"
-                 id="exampleInputAddress" 
-                 required 
-                 name="address"
-                 th:value="${custprofile.address}">
-                  <div id="emailHelp" class="form-text">We'll never share your address with anyone else.</div>
+                  <label for="exampleInputPhone" class="form-label">Phone Number</label>
+                  <input type="text"
+                  class="form-control" 
+                  id="exampleInputNumber"
+                  maxlength = "11" 
+                  required
+                  name="custphone"
+                  th:value="(${custprofile.custphone})">
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputAddress" class="form-label">Address</label>
+                  <input type="text"
+                  class="form-control"
+                  id="exampleInputAddress" 
+                  required 
+                  name="custaddress"
+                  th:value="${custprofile.custaddress}">
+                    <div id="emailHelp" class="form-text">We'll never share your address with anyone else.</div>
+                </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password"
+                class="form-control" 
+                id="exampleInputPassword1" 
+                minlength="8" 
+                required
+                name="password"
+                th:value="${custprofile.password}">
+                <div id="passwordHelp" class="form-text">At least 8 characters.</div>
               </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="text"
-               class="form-control" 
-               id="exampleInputPassword1" 
-               minlength="8" 
-               required
-               name="password"
-               th:value="${custprofile.password}">
-              <div id="passwordHelp" class="form-text">At least 8 characters.</div>
-            </div>
-            <div class="text-center">
-            <button id="btncustsave"type="submit" class="btn btn-warning ">SAVE</button>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#signoutcustModal">
-              SIGN OUT
-             </button>
-             <!-- Button trigger modal -->
-             <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletecustModal">
-              DELETE ACCOUNT
-             </button>
+              <div class="text-center">
+              <button id="btncustsave"type="submit" class="btn btn-warning ">SAVE</button>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#signoutcustModal">
+                SIGN OUT
+              </button>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletecustModal">
+                DELETE ACCOUNT
+              </button>
 
-             <!-- Modal Signout-->
-            <div class="modal fade" id="signoutcustModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="signoutcustModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-            <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">SIGN OUT</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Are you sure want to sign out?
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">CANCEL</button>
-            <a th:href="@{/logout}"><button type="button" class="btn btn-danger">YES, I'M SURE</button></a>
-            </div>
-            </div>
-            </div>
-            </div>
- 
-            <!-- Modal delete -->
-            <div class="modal fade" id="deletecustModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-            <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">DELETE ACCOUNT</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              Are you sure want to delete this account?
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">CANCEL</button>
-            <a th:href="@{/deletecust}"><button type="button" class="btn btn-danger">YES, I'M SURE</button></a>
-            </div>
-            </div>
-            </div>
-            </div>
-            </div></div>
-            </div>
-        </form></div>
+              <!-- Modal Signout-->
+              <div class="modal fade" id="signoutcustModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="signoutcustModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+              <div class="modal-content">
+              <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">SIGN OUT</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  Are you sure want to sign out?
+              </div>
+              <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">CANCEL</button>
+              <a th:href="@{/logout}"><button type="button" class="btn btn-danger">YES, I'M SURE</button></a>
+              </div>
+              </div>
+              </div>
+              </div>
+  
+              <!-- Modal delete -->
+              <div class="modal fade" id="deletecustModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+              <div class="modal-content">
+              <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">DELETE ACCOUNT</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                Are you sure want to delete this account?
+              </div>
+              <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">CANCEL</button>
+              <a th:href="@{/deletecust}"><button type="button" class="btn btn-danger">YES, I'M SURE</button></a>
+              </div>
+              </div>
+              </div>
+              </div>
+              </div></div>
+              </div>
+          </form></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
-  </body>
-  <!-- footer section start here  -->
-<footer class="footer" id="contact">
-  <div class="box-container">
-      
-      <div class="box">
-          <h3>Opening Hours</h3>
-          <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
-      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+    </body>
+    <!-- footer section start here  -->
+  <footer class="footer" id="contact">
+    <div class="box-container">
+        
+        <div class="box">
+            <h3>Opening Hours</h3>
+            <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
+        </div>
 
-      <div class="box">
-          <h3>Contact Us</h3>
-          <p>iRizq Kitchen Sabak Bernam (HQ)</p>
-          <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
-          <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
-          <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
-      </div>
+        <div class="box">
+            <h3>Contact Us</h3>
+            <p>iRizq Kitchen Sabak Bernam (HQ)</p>
+            <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
+            <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
+            <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
+        </div>
 
-      <div class="box">
-          <h3>About Us</h3>
-          <a th:href="@{http://localhost:5000/about#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
-          <a th:href="@{http://localhost:5000/about#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
-          <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
-      </div>
+        <div class="box">
+            <h3>About Us</h3>
+            <a th:href="@{http://localhost:5000/about#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
+            <a th:href="@{http://localhost:5000/about#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
+            <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
+        </div>
 
-  </div>
-  <div class="share">
-      <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
-      <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
-  </div>
-  <div class="credit">
-      irizqkitchen <span>&copy;</span> 2022
-  </div>
-</footer>
-</html>
+    </div>
+    <div class="share">
+        <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
+        <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
+    </div>
+    <div class="credit">
+        irizqkitchen <span>&copy;</span> 2022
+    </div>
+  </footer>
+  </html>
