--- a/src/main/resources/templates/staffprofile.html
+++ b/src/main/resources/templates/staffprofile.html
@@ -23,6 +23,7 @@
     </div>
   
     <nav class="navbar">
+        <a th:href="@{/stafflist}">Baker list</a>
         <a th:href="@{/stafforder}">Order List</a>
         <a th:href="@{/staffmenu}">Menu</a>
         <a th:href="@{/staffregister}">Register new baker</a>
@@ -36,7 +37,7 @@
         <h1 class="registerform d-flex justify-content-center">BAKER PROFILE</h1>
         <form 
         class="d-flex justify-content-center"
-        th:action="@{/staffbaker}"
+        th:action="@{/staffupdate}"
         method="post"
         modelAttribute  ="staffprofile"
         th:object="${staffprofile}"
@@ -65,7 +66,7 @@
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label ">Password</label>
-              <input type="text"
+              <input type="password"
                class="form-control" 
                id="exampleInputPassword1" 
                minlength="8" 
