--- a/src/main/resources/templates/user/catalogue.html
+++ b/src/main/resources/templates/user/catalogue.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
         <!-- custom css file  -->
-        <link rel="stylesheet" th:href="@{stylesheets/cata.css}">
+        <link rel="stylesheet" th:href="@{stylesheets/catalogue.css}">
     
     </head>
 <body>
@@ -110,9 +110,9 @@
                   <li>6" (RM32)</li>
                   <li>8" (RM65)</li>
                 </ul><br>
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="font-size: medium; background-color: #000000; border: #000000; border-radius: 8px; padding: 10px 20px;"><strong>Order Here</strong></button>
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight2" aria-controls="offcanvasRight" style="font-size: medium; background-color: #000000; border: #000000; border-radius: 8px; padding: 10px 20px;"><strong>Order Here</strong></button>
     
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight2" aria-labelledby="offcanvasRightLabel">
                   <div class="offcanvas-header">
                   <h2 class="offcanvas-title2" id="offcanvasRightLabel">Kek Batik Indulgence</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -161,9 +161,9 @@
                   <li>Marshmallow</li>
                 </ul><br>
 
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="font-size: medium; background-color: #000000; border: #000000; border-radius: 8px; padding: 10px 20px;"><strong>Order Here</strong></button>
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight3" aria-controls="offcanvasRight" style="font-size: medium; background-color: #000000; border: #000000; border-radius: 8px; padding: 10px 20px;"><strong>Order Here</strong></button>
     
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight3" aria-labelledby="offcanvasRightLabel">
                   <div class="offcanvas-header">
                   <h2 class="offcanvas-title2" id="offcanvasRightLabel">Cupcakes</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
