--- a/src/main/resources/templates/user/about.html
+++ b/src/main/resources/templates/user/about.html
@@ -24,14 +24,12 @@
  <!-- header section start here  -->
  <header class="header">
     <div class="logoContent">
-        <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+        <a th:href="@{/}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
         <h1 class="logoName">iRizq Kitchen</h1>
     </div>
   
     <nav class="navbar">
-        <a th:href="@{/catalogue}">Catalogue</a>
         <a th:href="@{/about}">About</a>
-        <a th:href="@{/faqs}">FAQs</a>
         <a th:href="@{/custprofile}">Profile</a>
     </nav>
   </header>
