--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -24,11 +24,12 @@
  <!-- header section start here  -->
  <header class="header">
   <div class="logoContent">
-      <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+      <a th:href="@{/}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
       <h1 class="logoName">iRizq Kitchen</h1>
   </div>
 
   <nav class="navbar">
+    <a th:href="@{/about}">ABOUT US</a>
       <a th:href="@{/login}">LOGIN</a>
   </nav>
 </header>
