--- a/src/main/resources/templates/user/catalogue.html
+++ b/src/main/resources/templates/user/catalogue.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
         <!-- custom css file  -->
-        <link rel="stylesheet" th:href="@{stylesheets/cata.css}">
+        <link rel="stylesheet" th:href="@{stylesheets/catalogue.css}">
     
     </head>
     <body>
@@ -45,7 +45,7 @@
     
             <!-- KEK PISANG -->
             <tr class="tableRow">
-              <td class="tableList1" colspan="2">KEK PISANG</td>
+              <td th:text="${cakes.cakename}" >KEK PISANG</td>
               <td class="tableOption1">SIZE</td>
             </tr>
             <tr>
